--- a/sangeng-framework/pom.xml
+++ b/sangeng-framework/pom.xml
@@ -90,8 +90,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.9.2</version>
         </dependency>
-
-
+<!--OSS依赖-->
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.11.0</version> <!-- 版本号可以根据实际情况进行调整 -->
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
